fixed linting and added initial commits for ping pong

--- a/DigitalPyHelloWorld/components/hello_world/configuration/external_action_mapping.ini
+++ b/DigitalPyHelloWorld/components/hello_world/configuration/external_action_mapping.ini
@@ -1,4 +1,5 @@
 [actionmapping]
+hello_world.HelloService?Hello?client_message = components.hello_world.hello_world_facade.HelloWorld.client_message
 
 [HelloWorld]
 __class = components.hello_world.hello_world.HelloWorld
