--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,12 @@
     
     "[python]": {
         "editor.defaultFormatter": "ms-python.autopep8",
-        "editor.formatOnSave": true
-    }
-      
+        "editor.formatOnSave": true,
+        
+    },
+    "autopep8.args": [
+        "--max-line-length",
+        "100"
+    ]
+    
 }
