--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -11,19 +11,14 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     
-    - name: Setup Python
-      uses: actions/setup-python@v2
+    - name: Setup Poetry
+      uses: pronovic/setup-poetry@v1
       with:
-        python-version: 3.10.0
-  
-    - name: Install poetry
-      run: |
-        python -m pip install poetry==1.1.11
-  
-    - name: Configure poetry
-      run: |
-        python -m poetry config virtualenvs.in-project true
-    
+        version: "1.2.0"
+        plugins: "poetry-plugin-export@==1.1.2"
+        cache-venv: "true"
+        cache-poetry: "true"
+        
     - name: Install dependencies
       run: |
         python -m poetry install
