--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -9,15 +9,11 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10"]
     steps:
-    - uses: actions/checkout@v1
-    
-    - name: Setup Poetry
-      uses: pronovic/setup-poetry@v1
+    - uses: actions/setup-python@v4
       with:
-        version: "1.2.0"
-        plugins: "poetry-plugin-export@==1.1.2"
-        cache-venv: "true"
-        cache-poetry: "true"
+        python-version: "3.11"
+    - uses: Gr1N/setup-poetry@v8
+    - run: poetry --version
         
     - name: Install dependencies
       run: |
