--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.11"]
     steps:
     - uses: actions/setup-python@v4
       with:
@@ -17,7 +17,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        python -m poetry install
+        poetry install
         
     - name: Analysing the code with pylint
       run: |
