--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        poetry install
+        poetry install ../pyproject.toml
         
     - name: Analysing the code with pylint
       run: |
