--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,6 +23,8 @@ jobs:
           path: ./.venv
           key: venv-${{ hashFiles('poetry.lock') }}
       - name: Install the project dependencies
-        run: poetry install
-      - name: Run the automated tests (for example)
-        run: poetry run pytest -v
+        run: |
+          poetry install
+          pip install pylint
+      - name: Run the linting
+        run: pylint -f json
