--- a/DigitalPyHelloWorld/components/hello_world/configuration/manifest.ini
+++ b/DigitalPyHelloWorld/components/hello_world/configuration/manifest.ini
@@ -21,10 +21,11 @@ repo = https://pypi.org/project/DigtalPyHelloWorld/
 license = EPL
 
 [HelloService]
+default_status = Running
 service_id = hello_world.HelloService
 name = HelloService
 description = "Hello World Service"
 network = TCPNetwork
-protocol = hello_protocol
+protocol = XML
 port = 8080
 host = 127.0.0.1
