--- a/DigitalPyHelloWorld/components/hello_world/configuration/external_action_mapping.ini
+++ b/DigitalPyHelloWorld/components/hello_world/configuration/external_action_mapping.ini
@@ -4,5 +4,13 @@
 [HelloWorld]
 __class = components.hello_world.hello_world.HelloWorld
 
-[HelloService]
+[DigitalPyHelloWorld.HelloService]
 __class = components.hello_world.service.hello_service.HelloService
+default_status = Running
+service_id = hello_world.HelloService
+name = HelloService
+description = "Hello World Service"
+network = TCPNetwork
+protocol = XML
+port = 8080
+host = 127.0.0.1
