implemented further endpoints and persistency

--- a/DigitalPyHelloWorld/components/health/configuration/external_action_mapping.ini
+++ b/DigitalPyHelloWorld/components/health/configuration/external_action_mapping.ini
@@ -1,10 +1,12 @@
 [actionmapping]
-?CreateHealth?post = components.health.health_facade.HealthFacade.CreateHealth_post
+?CreateHealth?post = components.health.health_facade.HealthFacade.create_health_post
 
-?RetrieveHealth?get = components.health.health_facade.HealthFacade.RetrieveHealth_get
+?RetrieveHealth?get = components.health.health_facade.HealthFacade.retrieve_health_get
 
-?ListHealth?get = components.health.health_facade.HealthFacade.ListHealth_get
+?ListHealth?get = components.health.health_facade.HealthFacade.list_health_get
 
-?UpdateHealth?put = components.health.health_facade.HealthFacade.UpdateHealth_put
+?UpdateHealth?put = components.health.health_facade.HealthFacade.update_health_put
 
-?DeleteHealth?delete = components.health.health_facade.HealthFacade.DeleteHealth_delete
+?DeleteHealth?delete = components.health.health_facade.HealthFacade.delete_health_delete
+
+?RetrieveHealth?get = components.health.health_facade.HealthFacade.retrieve_health_get
