fix: added support for blueprint based flask service

--- a/DigitalPyHelloWorld/configuration/dp_hello_world_configuration.ini
+++ b/DigitalPyHelloWorld/configuration/dp_hello_world_configuration.ini
@@ -1,10 +1,4 @@
-[dpHelloWorld.api]
-__class = services.api_service.ApiService
-default_status = Running
-name = DPHelloWorldAPI
-description = DPHelloWorld API
-port = 8080
-host = 0.0.0.0
-service_id = dpHelloWorld-api
-protocol = JSON
-network = FlaskHTTPNetwork
+; the core api configuration with updated blueprint path
+[digitalpy.core_api]
+blueprint_path = DigitalPyHelloWorld/blueprints/
+blueprint_import_base = DigitalPyHelloWorld.blueprints
