--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ DigitalPy = "^0.3.13.7"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.0.2"
-DigitalPy = { git = "https://github.com/FreeTAKTeam/DigitalPy.git", branch="service_manager" }
+DigitalPy = { path = "C:\\Users\\Natha Paquette\\work\\DigitalPy", develop=true }
 
 [tool.pytest.ini_options]
 pythonpath = [
